--- a/src/pages/arequipa.astro
+++ b/src/pages/arequipa.astro
@@ -1,6 +1,7 @@
 ---
 import BreadcrumbArequipa from "../components/BreadcrumbArequipa.astro"
 import Navbar from "../components/Navbar.astro"
+import Footer from "../components/Footer.astro"
 import Layout from "../layouts/Layout.astro"
 ---
 <Layout>
@@ -136,4 +137,5 @@ import Layout from "../layouts/Layout.astro"
             </div>
         </div>
     </section>
+    <Footer />
 </Layout>
