--- a/src/pages/cajamarca.astro
+++ b/src/pages/cajamarca.astro
@@ -1,6 +1,7 @@
 ---
 import BreadcrumbCajamarca from "../components/BreadcrumbCajamarca.astro"
 import Navbar from "../components/Navbar.astro"
+import Footer from "../components/Footer.astro"
 import Layout from "../layouts/Layout.astro"
 ---
 <Layout>
@@ -85,4 +86,5 @@ import Layout from "../layouts/Layout.astro"
             </a>
         </div>
     </section>
+    <Footer />
 </Layout>
