--- a/src/pages/cartagena-de-indias.astro
+++ b/src/pages/cartagena-de-indias.astro
@@ -1,6 +1,7 @@
 ---
 import BreadcrumbCCartagenadeIndias from "../components/BreadcrumbCCartagenadeIndias.astro"
 import Navbar from "../components/Navbar.astro"
+import Footer from "../components/Footer.astro"
 import Layout from "../layouts/Layout.astro"
 ---
 <Layout>
@@ -227,4 +228,5 @@ import Layout from "../layouts/Layout.astro"
             </div>
         </div>
     </section>
+    <Footer />
 </Layout>
