--- a/src/pages/cusco-magico.astro
+++ b/src/pages/cusco-magico.astro
@@ -1,6 +1,7 @@
 ---
 import BreadcrumbCuscoMagico from "../components/BreadcrumbCuscoMagico.astro"
 import Navbar from "../components/Navbar.astro"
+import Footer from "../components/Footer.astro"
 import Layout from "../layouts/Layout.astro"
 ---
 <Layout>
@@ -180,4 +181,5 @@ import Layout from "../layouts/Layout.astro"
             </div>
         </div>
     </section>
+    <Footer />
 </Layout>
