--- a/src/pages/playas-del-norte.astro
+++ b/src/pages/playas-del-norte.astro
@@ -1,6 +1,7 @@
 ---
 import BreadcrumbPlayasdelNorte from "../components/BreadcrumbPlayasdelNorte.astro"
 import Navbar from "../components/Navbar.astro"
+import Footer from "../components/Footer.astro"
 import Layout from "../layouts/Layout.astro"
 ---
 <Layout>
@@ -166,4 +167,5 @@ import Layout from "../layouts/Layout.astro"
             </div>
         </div>
     </section>
+    <Footer />
 </Layout>
