--- a/src/pages/punta-cana.astro
+++ b/src/pages/punta-cana.astro
@@ -1,6 +1,7 @@
 ---
 import BreadcrumbPuntaCana from "../components/BreadcrumbPuntaCana.astro"
 import Navbar from "../components/Navbar.astro"
+import Footer from "../components/Footer.astro"
 import Layout from "../layouts/Layout.astro"
 ---
 <Layout>
@@ -179,4 +180,5 @@ import Layout from "../layouts/Layout.astro"
             </div>
         </div>
     </section>
+    <Footer />
 </Layout>
