--- a/src/pages/sur-magico.astro
+++ b/src/pages/sur-magico.astro
@@ -1,9 +1,11 @@
 ---
 import BreadcrumbSurMagico from "../components/BreadcrumbSurMagico.astro"
 import Navbar from "../components/Navbar.astro"
+import Footer from "../components/Footer.astro"
 import Layout from "../layouts/Layout.astro"
 ---
 <Layout>
     <Navbar />
     <BreadcrumbSurMagico />
+    <Footer />
 </Layout>
