--- a/src/pages/riviera-maya.astro
+++ b/src/pages/riviera-maya.astro
@@ -1,6 +1,7 @@
 ---
 import BreadcrumbRivieraMaya from "../components/BreadcrumbRivieraMaya.astro"
 import Navbar from "../components/Navbar.astro"
+import Footer from "../components/Footer.astro"
 import Layout from "../layouts/Layout.astro"
 ---
 <Layout>
@@ -260,4 +261,5 @@ import Layout from "../layouts/Layout.astro"
             </div>
         </div>
     </section>
+    <Footer />
 </Layout>
