--- a/src/pages/royal-decameron.astro
+++ b/src/pages/royal-decameron.astro
@@ -1,6 +1,7 @@
 ---
 import BreadcrumbRoyalDecameron from "../components/BreadcrumbRoyalDecameron.astro"
 import Navbar from "../components/Navbar.astro"
+import Footer from "../components/Footer.astro"
 import Layout from "../layouts/Layout.astro"
 ---
 <Layout>
@@ -209,4 +210,5 @@ import Layout from "../layouts/Layout.astro"
             </div>
         </div>
     </section>
+    <Footer />
 </Layout>
