--- a/src/pages/tarapoto-fascinante.astro
+++ b/src/pages/tarapoto-fascinante.astro
@@ -1,6 +1,7 @@
 ---
 import BreadcrumbTarapotoFascinante from "../components/BreadcrumbTarapotoFascinante.astro"
 import Navbar from "../components/Navbar.astro"
+import Footer from "../components/Footer.astro"
 import Layout from "../layouts/Layout.astro"
 ---
 <Layout>
@@ -183,4 +184,5 @@ import Layout from "../layouts/Layout.astro"
             </div>
         </div>
     </section>
+    <Footer />
 </Layout>
