cambio en el slider

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -17,6 +17,12 @@
                 </a>
             </li>
 
+            <li>
+                <a href="/nosotros" class="block py-3 px-4 xl:hover:text-yellow-400 transition menu-link">
+                    Nosotros
+                </a>
+            </li>
+
             <!-- Paquetes Internacionales -->
             <li class="relative w-full xl:w-auto group">
                 <button class="block w-full text-center py-3 px-4 xl:hover:text-yellow-400 transition submenu-toggle xl:cursor-pointer">
