--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -3,7 +3,7 @@ const slides = [
     { image: "../../slide4.png", title: "Punta Cana - Rep. Dominicana", buttonText: "Consultar Ahora", position: "object-[30%_50%]" },
     { image: "../../slide5.png", title: "San Andrés - Colombia", buttonText: "Consultar Ahora", position: "object-[30%_50%]" },
     { image: "../../slide2.png", title: "Cartagena de Indias - Colombia", buttonText: "Consultar Ahora", position: "object-center" },
-    { image: "../../slide3.png", title: "Royal Decameron - Perú", buttonText: "Consultar Ahora", position: "object-[30%_50%]" },
+    { image: "../../slide3.png", title: "Royal Decameron", buttonText: "Consultar Ahora", position: "object-[30%_50%]" },
     { image: "../../slide1.png", title: "Cusco Mágico - Perú", buttonText: "Consultar Ahora", position: "object-center" },
 ];
 
