--- a/src/components/Recomended.astro
+++ b/src/components/Recomended.astro
@@ -53,7 +53,7 @@
             <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
                 <img src="/../cartagena-de-indias.png" alt="Cartagena de Indias" class="object-cover rounded-lg w-full h-44" loading="lazy" />
                 <div class="pt-8 pb-4">
-                    <a href="#" class="block text-xl text-blue-800 font-bold h-14 hover:text-red-700 transition-colors">
+                    <a href="/cartagena-de-indias" class="block text-xl text-blue-800 font-bold h-14 hover:text-red-700 transition-colors">
                         CARTAGENA DE INDIAS
                     </a>
                     <p class="text-gray-950">
@@ -73,7 +73,7 @@
             <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
                 <img src="/../san-andres.png" alt="Cartagena de Indias" class="object-cover rounded-lg w-full h-44" loading="lazy" />
                 <div class="pt-8 pb-4">
-                    <a href="#" class="block text-xl text-blue-800 font-bold h-14 hover:text-red-700 transition-colors">
+                    <a href="/san-andres" class="block text-xl text-blue-800 font-bold h-14 hover:text-red-700 transition-colors">
                         SAN ANDRÉS
                     </a>
                     <p class="text-gray-950">
@@ -93,7 +93,7 @@
             <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
                 <img src="/../royal-decameron.png" alt="Royal Decameron" class="object-cover rounded-lg w-full h-44" loading="lazy" />
                 <div class="pt-8 pb-4">
-                    <a href="#" class="block text-xl text-blue-800 font-bold h-14 hover:text-red-700 transition-colors">
+                    <a href="/royal-decameron" class="block text-xl text-blue-800 font-bold h-14 hover:text-red-700 transition-colors">
                         ROYAL DECAMERON
                     </a>
                     <p class="text-gray-950">
@@ -113,7 +113,7 @@
             <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
                 <img src="/../cusco.png" alt="Cusco mágico" class="object-cover rounded-lg w-full h-44" loading="lazy" />
                 <div class="pt-8 pb-4">
-                    <a href="#" class="block text-xl text-blue-800 font-bold h-14 hover:text-red-700 transition-colors">
+                    <a href="/cusco-magico" class="block text-xl text-blue-800 font-bold h-14 hover:text-red-700 transition-colors">
                         CUSCO MÁGICO
                     </a>
                     <p class="text-gray-950">
@@ -133,7 +133,7 @@
             <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
                 <img src="/../tarapoto.png" alt="Tarapoto fascinante" class="object-cover rounded-lg w-full h-44" loading="lazy" />
                 <div class="pt-8 pb-4">
-                    <a href="#" class="block text-xl text-blue-800 font-bold h-14 hover:text-red-700 transition-colors">
+                    <a href="/tarapoto-fascinante" class="block text-xl text-blue-800 font-bold h-14 hover:text-red-700 transition-colors">
                         TARAPOTO <br /> FASCINANTE
                     </a>
                     <p class="text-gray-950">
@@ -153,7 +153,7 @@
             <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
                 <img src="/../rustica-vichayito.png" alt="Playas del norte - Rustica Vichayito" class="object-cover rounded-lg w-full h-44" loading="lazy" />
                 <div class="pt-8 pb-4">
-                    <a href="#" class="block text-xl text-blue-800 font-bold h-14 hover:text-red-700 transition-colors">
+                    <a href="/playas-del-norte" class="block text-xl text-blue-800 font-bold h-14 hover:text-red-700 transition-colors">
                         PLAYAS DEL NORTE - RÚSTICA VICHAYITO
                     </a>
                     <p class="text-gray-950">
@@ -173,7 +173,7 @@
             <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
                 <img src="/../cajamarca.png" alt="Pacaya Samiria desde Tarapoto" class="object-cover rounded-lg w-full h-44" loading="lazy" />
                 <div class="pt-8 pb-4">
-                    <a href="#" class="block text-xl text-blue-800 font-bold h-14 hover:text-red-700 transition-colors">
+                    <a href="/cajamarca" class="block text-xl text-blue-800 font-bold h-14 hover:text-red-700 transition-colors">
                         CAJAMARCA
                     </a>
                     <p class="text-gray-950">
@@ -193,7 +193,7 @@
             <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
                 <img src="/../arequipa.png" alt="Pacaya Samiria desde Tarapoto" class="object-cover rounded-lg w-full h-44" loading="lazy" />
                 <div class="pt-8 pb-4">
-                    <a href="#" class="block text-xl text-blue-800 font-bold h-14 hover:text-red-700 transition-colors">
+                    <a href="/arequipa" class="block text-xl text-blue-800 font-bold h-14 hover:text-red-700 transition-colors">
                         AREQUIPA
                     </a>
                     <p class="text-gray-950">
@@ -213,7 +213,7 @@
             <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
                 <img src="/../paracas.png" alt="Sur Mágico - Dunas" class="object-cover rounded-lg w-full h-44" width="358" height="176" loading="lazy" />
                 <div class="pt-8 pb-4">
-                    <a href="#" class="block text-xl text-blue-800 font-bold h-14 hover:text-red-700 transition-colors">
+                    <a href="/sur-magico" class="block text-xl text-blue-800 font-bold h-14 hover:text-red-700 transition-colors">
                         SUR MÁGICO - DUNAS
                     </a>
                     <p class="text-gray-950">
