--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,9 +7,9 @@ import "../styles/global.css";
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<title>Expeditions Group | Viajes Inolvidables en Perú y el Mundo</title>
-		<meta name="description" content="Explora destinos únicos como Arequipa, Tarapoto, Punta Cana y más con Expeditions Group. Vive una experiencia única e inolvidable." />
-		<meta name="keywords" content="viajes, turismo, Perú, Arequipa, Tarapoto, Cartagena, Punta Cana, Decameron, Rustica, expediciones, paquetes turísticos" />
-		<meta name="author" content="Expeditions Group" />
+		<meta name="description" content="Explora destinos únicos como Punta Cana, Riviera Maya, Arequipa, Tarapoto y más con Expeditions Group. Vive una experiencia única e inolvidable." />
+		<meta name="keywords" content="viajes, turismo, Perú, Punta Cana, Decameron, Rustica, Arequipa, Tarapoto, Cartagena,  expediciones, paquetes turísticos" />
+		<meta name="author" content="Rubén Tipiani" />
 		<meta name="robots" content="index, follow" />
 
 		<!-- SEO regional -->
@@ -36,6 +36,11 @@ import "../styles/global.css";
 
 		<!-- Accesibilidad y mejoras UX -->
 		<meta name="theme-color" content="#0f172a" />
+
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
 	</head>
 	<body>
 		<slot />
