--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ import "../styles/global.css";
 		<!-- Open Graph para redes sociales -->
 		<meta property="og:title" content="Expeditions Group | Viajes Inolvidables" />
 		<meta property="og:description" content="Explora destinos únicos como Arequipa, Tarapoto, Punta Cana y más con nosotros." />
-		<meta property="og:image" content="/og-image.jpg" /> <!-- Asegúrate de tener esta imagen -->
+		<meta property="og:image" content="/imagen_de_previsualizacion.avif" /> <!-- Asegúrate de tener esta imagen -->
 		<meta property="og:url" content="https://www.expeditionsgroup.com" />
 		<meta property="og:type" content="website" />
 
@@ -28,7 +28,7 @@ import "../styles/global.css";
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:title" content="Expeditions Group | Viajes Inolvidables" />
 		<meta name="twitter:description" content="Explora destinos únicos como Arequipa, Tarapoto, Punta Cana y más con nosotros." />
-		<meta name="twitter:image" content="/og-image.jpg" />
+		<meta name="twitter:image" content="/imagen_de_previsualizacion.avif" />
 
 		<!-- Favicon -->
 		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
